# fieldnotes

./: Cargo.toml  LICENSE  Makefile  README.md
src/: fieldnotes.json  main.rs  oldmain.rs
src/content/: architect.md  candidates  candidates.md  divisiveness.md  gme.md  money.md  origins.md  silence  syntax  syntax-cheatsheet.md  tate.md  television-blindness.md  vaccines.md
src/notes/: silence
src/static/css/: base.css
src/templates/: base.html  index.html  nav.html
templates/: base.html  index.html  nav.html  note.html
