[package]
name = "fieldnotes"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tera = "1.18"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
comrak = "0.18"
chrono = "0.4"
include_dir = "0.7"
